# laser-rhythmus-apparat

./: .gitignore  CMakeLists.txt  Projekttagebuch-Musikinformatik_Laser_Rhythmus_Apparat.docx  Projekttagebuch-Musikinformatik_neu (2).docx  main.cpp  makefile  package.xml  paex_sine.c  readme.md  sirene.cpp
Steckplan/: lra.fzz
Steckplan/Import/: Arduino-R4-Minima.fzpz
lra-vl53l0x/: lra-vl53l0x.ino
src/: subscriber_class.cpp
