<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lra</name>
  <version>0.0.0</version>
  <description>Install ROS. Create a workspace. Create a package.</description>
  <author email="fdegen@uos.de">Fynn Degen</author>
  <maintainer email="fdegen@uos.de">Fynn Degen</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>portaudio</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
